changed implementation of GpFilePath#getUrl so that ServerFilePaths don't drop the extra (double) slash character; added GpFilePath#initMetadata GP-3388
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@9993 48a7a3f7-ad46-0410-b969-29950918272e